--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Johnny Hane",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.11",
     "@types/react": "^18.0.5",
     "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "babel-loader": "^8.2.5"
   },
   "dependencies": {
     "react": "^18.0.0",
+    "react-date-picker": "^8.4.0",
+    "react-dom": "^18.1.0",
+    "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
