tryna get peer deps counting as externals

--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "nested-forms",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "rollup -c"
   },
   "author": "Johnny Hane",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@storybook/addon-actions": "^6.4.22",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.4.22",
@@ -22,16 +27,28 @@
     "@types/react": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
-    "babel-loader": "^8.2.5"
+    "babel-loader": "^8.2.5",
+    "postcss": "^8.4.13",
+    "rollup": "^2.72.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "react": "^18.0.0",
+    "react": "^17.0.0",
     "react-date-picker": "^8.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
     "react-tooltip": "^4.2.21",
+    "rollup-plugin-postcss": "^4.0.2",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
+  },
+  "peerDependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "styled-components": "^5.0.0",
+    "react-select": "^5.0.0"
   }
 }
