--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nested-forms",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -46,7 +46,7 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": "^16.14.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "styled-components": "^5.0.0",
     "react-select": "^5.0.0"
