--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nested-forms",
-  "version": "1.0.13",
+  "version": "1.0.16",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -32,9 +32,7 @@
     "rollup": "^2.72.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
+    "typescript": "^4.6.4",
     "react": "^17.0.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
@@ -46,8 +44,8 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
     "styled-components": "^5.0.0",
     "react-select": "^5.0.0"
   }
