--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nested-forms",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -28,25 +28,27 @@
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
+    "babel-preset-react-app": "^10.0.1",
     "postcss": "^8.4.13",
-    "rollup": "^2.72.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.6.4",
     "react": "^17.0.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
     "react-tooltip": "^4.2.21",
+    "rollup": "^2.72.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass-loader": "^12.6.0",
     "styled-components": "^5.3.5",
+    "typescript": "^4.6.4",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
-    "styled-components": "^5.0.0",
-    "react-select": "^5.0.0"
+    "react-select": "^5.0.0",
+    "styled-components": "^5.0.0"
   }
 }
