storybook works now I guess, boutta delete rollup'd stuff, re-run rollup, and then check if it's working on BP

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "build": "rollup -c"
+    "build-storybook": "build-storybook"
   },
   "author": "Johnny Hane",
   "license": "MIT",
@@ -24,15 +24,15 @@
     "@storybook/addon-links": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.11",
-    "@types/react": "^18.0.5",
+    "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "babel-preset-react-app": "^10.0.1",
     "postcss": "^8.4.13",
-    "react": "^17.0.0",
+    "react": "^16.8.0",
     "react-date-picker": "^8.4.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.0.0",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
     "react-tooltip": "^4.2.21",
@@ -50,5 +50,6 @@
     "react-dom": ">=16.8.0",
     "react-select": "^5.0.0",
     "styled-components": "^5.0.0"
-  }
+  },
+  "dependencies": {}
 }
