--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-select": "^5.3.0",
     "react-tooltip": "^4.2.21",
     "rollup": "^2.72.1",
+    "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
